--- a/journal/202204.md
+++ b/journal/202204.md
@@ -1,17 +1,11 @@
 # {DRAFT} Decred Journal – April 2022
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
-
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
-
-{ highlights ideas
+![](../img/202204.1.github.png)
 
 - Version 1.7.2 of the Decred node and wallet software was released on May 11, it fixes some bugs and adds the Treasury spend voting feature for Decrediton users. 
 - The four consensus changes DCP0007-DCP0010 were all approved by stakeholder voting with almost unanimous support (~99.7%) in April, and all have activated on May 8 so any nodes running old versions will have been forked off the network.
 - In March, the majority of the funds held in the old treasury address, over 610,000 DCR, was transferred  into the new treasury which requires stakeholder approval of spends.
 - So far in 2022 there have been four Politeia proposals published, all approved with 96%+ support - funding has been extended for Politeia and DCRDEX development, along with video production and the @stakeshuffle_ twitter bot. 
-
-}
 
 Contents: { sync }
 
@@ -78,7 +72,7 @@ Other changes:
 
 { image candidates: 3669! 3730 3733 3734 3743 }
 
-![TreasuryTab](https://user-images.githubusercontent.com/46197055/168204530-770b6d39-3bbf-41fe-9ec5-46e74cec025b.png)
+![](../img/202204.2.github.png)
 
 
 <a id="politeia" />
@@ -142,13 +136,12 @@ DCRDEX development is on fire. SPV mode is now completed for use in Decredition.
 - Better contract expiry edge case handling on the [server](https://github.com/decred/dcrdex/pull/1541) and on the [client](https://github.com/decred/dcrdex/pull/1548).
 - Various bug fixes, optimizations, and other improvements.
 
-In progress:
+![](../img/202204.3.github.png)
 
 > v0.5 is shaping up with a lot of big changes. Loads [already merged](https://github.com/decred/dcrdex/milestone/16?closed=1), but under review presently are swap acceleration with [CPFP transactions](https://github.com/decred/dcrdex/pull/1555), [mixed DCR](https://github.com/decred/dcrdex/pull/1498) account support, support for LTC's MWEB release, [Zcash](https://github.com/decred/dcrdex/pull/1570), [Electrum](https://github.com/decred/dcrdex/pull/1607) wallet support (SPV for many assets with existing/external wallets), and of course ETH on mainnet which we have been holding back from prime time. \[[@chappjc](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$sH4VqshHQ7s-yUkldhYG7SGlVpPlyCjExbiLkCoX9Y0)\]
 
 { image candidates: 1589 }
 
-![DEX Registration](https://user-images.githubusercontent.com/9373513/163723857-98e6d254-aa11-4294-a737-3758336434ec.png)
 
 <a id="dcrandroid" />
 
