Dev iOS Wallet add 2 items, tweaks
- Mostly same reasoning as in 26c14ac
- Move unmerged work to In progress bullet list

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -165,13 +165,18 @@ DCRDEX development is on fire. SPV mode is now completed for use in Decredition.
 
 **[Decred Wallet (iOS)](https://github.com/planetdecred/dcrios)**
 
-- [Send page](https://github.com/planetdecred/dcrios/pull/902) has been reworked.
-- Users can use [Biometrics](https://github.com/planetdecred/dcrios/pull/883) such as Touch/Face ID for their Pin/Password. 
+- [Send success dialog](https://github.com/planetdecred/dcrios/pull/902) has been reworked.
+- Users can use [biometrics](https://github.com/planetdecred/dcrios/pull/883) such as Touch ID/Face ID for their spending Password/PIN. 
 - Info icon added to explain how the [transaction byte size](https://github.com/planetdecred/dcrios/pull/876) is determined.
-- [Privacy account](https://github.com/planetdecred/dcrios/pull/906) setup has been optimized. 
-- Various tweaks, bug fixes, and other optimizations. 
-- New [Proposals UI](https://github.com/planetdecred/dcrios/issues/890). (In progress)
-- The capability for [consensus voting](https://github.com/planetdecred/dcrios/issues/889). (In progress)
+- Removed DCR logo from Receive [QR code](https://github.com/planetdecred/dcrios/pull/903).
+- [Privacy account](https://github.com/planetdecred/dcrios/pull/906) setup UX has been optimized.
+- Prevent restoring [duplicate wallets](https://github.com/planetdecred/dcrios/pull/905) from same seed.
+- Various tweaks, bug fixes, and other optimizations.
+
+In progress:
+
+- New [Proposals UI](https://github.com/planetdecred/dcrios/issues/890).
+- The capability for [consensus voting](https://github.com/planetdecred/dcrios/issues/889).
 
 <a id="godcr" />
 
