--- a/journal/202204.md
+++ b/journal/202204.md
@@ -184,11 +184,21 @@ In progress:
 
 _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
+- Visualize [available/locked](https://github.com/planetdecred/godcr/pull/826) balance on the Staking page.
 - Initial [DEX integration](https://github.com/planetdecred/godcr/pull/722) work is on-going. [Wallet setup](https://github.com/planetdecred/godcr/pull/798) is completed, along with the [DEX registration](https://github.com/planetdecred/godcr/pull/900) function.
 - Proposal details [displayed in a modal](https://github.com/planetdecred/godcr/pull/901) instead of tooltip.
-- New [add wallet](https://github.com/planetdecred/godcr/pull/897) button layout implemented.
-- [Staking Updates](https://github.com/planetdecred/godcr/pull/888). 
+- New [add wallet](https://github.com/planetdecred/godcr/pull/897) button layout implemented. { maybe move to tweaks }
+- [Staking updates](https://github.com/planetdecred/godcr/pull/888). { maybe move to fixes*2 }
+- Added a checkbox to [move funds](https://github.com/planetdecred/godcr/pull/890) when setting up mixing.
+- Prevent restoring [duplicate wallets](https://github.com/planetdecred/godcr/pull/891) from same seed or same xpub.
+- Prevent usage of the default account in [StakeShuffle](https://github.com/planetdecred/godcr/pull/904).
+- Fixed possible [address reuse](https://github.com/planetdecred/godcr/pull/899) on Receive page. Also, accessing Send and Receive pages will be blocked until sync is complete.
 - Various code refactoring, fixes, and other improvements.
+
+- ~{ 871 862 880 850 887 886 859 860*2 905*3 } bug fixes
+- ~{ 878 879 882 885 860*2 892 896 898 } tweaks
+
+- Updates to the base [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) to bring new features and fixes to Android, iOS and GoDCR.
 
 <a id="dcrdata" />
 
@@ -213,8 +223,8 @@ The Decred News Updates have a new face. [@Dajana_DCR](https://twitter.com/Dajan
 
 { new merged code contributors:
 
-- https://github.com/decred/dcrdex/pull/1578
-- https://github.com/planetdecred/dcrandroid/pull/623
+- https://github.com/decred/dcrdex/commits?author=Juneezee
+- https://github.com/planetdecred/dcrandroid/commits?author=yaroyazeed
 
 }
 
