Added 2 new contributers in #People

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -222,14 +222,12 @@ Other:
 
 ## People
 
+Welcome to new first-time contributors with code merged to master:
+@Juneezee ([dcrdex](https://github.com/decred/dcrdex/commits?author=Juneezee))!
+@yaroyazeed ([dcrandroid](https://github.com/planetdecred/dcrandroid/commits?author=yaroyazeed)
+
 The Decred News Updates have a new face. [@Dajana_DCR](https://twitter.com/DajanaDcr) is now helping @Exitus as a news host, changing things up! Her [debut video](https://www.youtube.com/watch?v=BSHywc5qRzU&t=38s) received over 1,000 views and 101 likes.
 
-{ new merged code contributors:
-
-- https://github.com/decred/dcrdex/commits?author=Juneezee
-- https://github.com/planetdecred/dcrandroid/commits?author=yaroyazeed
-
-}
 
 Community stats as of May 2 (compared against statistics from December's DCR Journal):
 
