--- a/journal/202204.md
+++ b/journal/202204.md
@@ -225,7 +225,8 @@ Other:
 Welcome to new first-time contributors with code merged to master:
 
 @Juneezee ([dcrdex](https://github.com/decred/dcrdex/commits?author=Juneezee))!
-@yaroyazeed ([dcrandroid](https://github.com/planetdecred/dcrandroid/commits?author=yaroyazeed)
+
+@yaroyazeed ([dcrandroid](https://github.com/planetdecred/dcrandroid/commits?author=yaroyazeed)!
 
 The Decred News Updates have a new face. [@Dajana_DCR](https://twitter.com/DajanaDcr) is now helping @Exitus as a news host, changing things up! Her [debut video](https://www.youtube.com/watch?v=BSHywc5qRzU&t=38s) received over 1,000 views and 101 likes.
 
