Updated dcrandorid section, added #601 image

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -156,10 +156,11 @@ DCRDEX development is on fire. SPV mode is now completed for use in Decredition.
 - User is notified if [available disk space](https://github.com/planetdecred/dcrandroid/pull/607) is low.
 - Icon added to [hide and show](https://github.com/planetdecred/dcrandroid/pull/601) wallet balance on overview page.
 - Updated [French](https://github.com/planetdecred/dcrandroid/pull/605) translation.
-- Various bug fixes, tweaks, and other optimizations.
-- ~{ 608*3 628 } bug fixes
+- Fixed 3 [dark mode](https://github.com/planetdecred/dcrandroid/pull/608) related bugs.
+- Fixed bug where the [add wallet](https://github.com/planetdecred/dcrandroid/pull/628) menu was missing.
+- Various other bug fixes, tweaks, and optimizations.
 
-{ image candidates: 601 624 }
+![](https://user-images.githubusercontent.com/25265396/161649433-afbcfe73-23c7-4727-b9b9-2db59ae46c9f.png)
 
 <a id="dcrios" />
 
