--- a/journal/202204.md
+++ b/journal/202204.md
@@ -160,7 +160,7 @@ DCRDEX development is on fire. SPV mode is now completed for use in Decredition.
 - Fixed bug where the [add wallet](https://github.com/planetdecred/dcrandroid/pull/628) menu was missing.
 - Various other bug fixes, tweaks, and optimizations.
 
-![](https://user-images.githubusercontent.com/25265396/161649433-afbcfe73-23c7-4727-b9b9-2db59ae46c9f.png)
+(attempted to add #601 photo but it came out huge)
 
 <a id="dcrios" />
 
