removed speculative comment in #marketing

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -389,8 +389,7 @@ Selected Twitter discussions:
 
 In April DCR was trading between USD $52.40-$86.2 / BTC 0.001295-0.002163. The average daily rate was $57.22.
 
-DCR rallied by nearly 45% to over $86 in one day on April 18th, its highest level in four months. This pump was unfortunately short-lived.{rr: I think it's better not to repeat speculation in the journal unless from a particularly relevant source}
-
+DCR rallied by nearly 45% to over $86 in one day on April 18th, its highest level in four months. This pump was unfortunately short-lived.
 
 ## Relevant External
 
