edited treasury spending tab image size

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -72,8 +72,7 @@ Other changes:
 
 { image candidates: 3669! 3730 3733 3734 3743 }
 
-![](../img/202204.2.github.png)
-
+<img src=../img/202204.2.github.png width="700" height="400">)
 
 <a id="politeia" />
 
