Dev GoDCR revise 1.7.0 bit
I think code stats is not the most helpful info to graps the scale of
the release so I replaced it with "8 months" and plugged my regular
annoyance about binary verification.

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -184,7 +184,7 @@ Other changes:
 
 _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
-[GoDCR v1.7.0](https://github.com/planetdecred/godcr/releases/tag/v1.7.0) has been released on Mainnet on May 11! A total of 273 changed files with 16,508 additions and 10,106 deletions have been made since v0.9.0.
+GoDCR v1.7.0 has been released on May 11! This is the first Mainnet release after almost 8 months of development and polishing since the v0.9.0 Testnet release. Get the [downloads and release notes](https://github.com/planetdecred/godcr/releases/tag/v1.7.0) and verify that it was really signed by `release@planetdecred.org` (key ends with `A3C9EB3218CCC3E8`).
 
 Merged in April:
 
