Dev Decrediton bring back tspend bullet
It was merged in March but went live in April and is quite important to
make an exception for it.

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -64,6 +64,7 @@ VSP oversight enhancements:
 
 Other changes:
 
+- A [Treasury Spending Tab](https://github.com/decred/decrediton/pull/3718) has been introduced. This is where users will vote on treasury spends.
 - Added redesigned [Tutorial](https://github.com/decred/decrediton/pull/3669) views under the Settings tab covering many aspects of Decred.
 - The Staking tab now features [an infographic](https://github.com/decred/decrediton/pull/3740) for first-time ticket buyers, reminding users the basics of Decred's time-locked ticket-based voting system.
 - Performance improvements in the [transaction's history tab](https://github.com/decred/decrediton/pull/3745). Notably, rows are now loaded gradually using infinite scrolling, which will reduce bottlenecks and sluggishness. Added highlighting of the last clicked row to keep track of user's position in the list.
@@ -71,7 +72,7 @@ Other changes:
 - More automated UI testing coverage.
 - ~5 bug fixes.
 
-{ image candidates: 3669! 3730 3733 3734 3743 }
+{ image candidates: 3669! 3730 3733 3734 3743, and 3718 since we added it }
 
 <img src=../img/202204.2.github.png width="700" height="400">
 
