People tweak and add monthly average deltas

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -207,28 +207,24 @@ In progress:
 **Other**
 
 - Updates for [Go 1.18](https://github.com/decred/dcrctl/pull/45) in many repos.
-- The [Decred Bug Bounty](https://bounty.decred.org/) program has been updated. A total of 228 submissions have been processed so far, with 21 of them being eligible for a payout. Details of three vulnerabilities can now be made public. Congrats to @Al1ex and @aditi\_singghh who have been listed in the Hall of Fame! Thanks to community member [degeri](https://twitter.com/degeri_crypto) for running the bug bounty program.
+- The [Decred Bug Bounty](https://bounty.decred.org/) program has been updated. A total of 228 submissions have been processed so far, with 21 of them being eligible for a payout. Details of three vulnerabilities can now be made public. Congrats to @Al1ex and @aditi\_singghh who have been listed in the Hall of Fame! Thanks to community member [@degeri](https://twitter.com/degeri_crypto) for running the bug bounty program.
 
 
 ## People
 
-Welcome to new first-time contributors with code merged to master:
-
-@Juneezee ([dcrdex](https://github.com/decred/dcrdex/commits?author=Juneezee))!
-
-@yaroyazeed ([dcrandroid](https://github.com/planetdecred/dcrandroid/commits?author=yaroyazeed))!
+Welcome to new first-time contributors with code merged to master: @Juneezee ([dcrdex](https://github.com/decred/dcrdex/commits?author=Juneezee)) and @yaroyazeed ([dcrandroid](https://github.com/planetdecred/dcrandroid/commits?author=yaroyazeed))!
 
 The Decred News Updates have a new face. [@Dajana_DCR](https://twitter.com/DajanaDcr) is now helping @Exitus as a news host, changing things up! Her [debut video](https://www.youtube.com/watch?v=BSHywc5qRzU&t=38s) received over 1,000 views and 101 likes.
 
+Community stats as of May 2 (compared against statistics from [December Journal](202112.md)):
 
-Community stats as of May 2 (compared against statistics from December's DCR Journal):
+- [Twitter](https://twitter.com/decredproject) followers: 54,862 (+3,946, +987/mo)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,621 (+133, +33/mo)
+- [Matrix](https://chat.decred.org/) #general users: 662 (+63, +16/mo)
+- [Discord](https://discord.gg/GJ2GXfz) users: 2,293 (+118, +30/mo)
+- [Telegram](https://t.me/Decred) users: 2,828 (-332, -83/mo)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,639 (-1), views: 214K (+14K, +3.4K/mo)
 
-- [Twitter](https://twitter.com/decredproject) followers: 54,862 (+3,946)
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,621 (+133)
-- [Matrix](https://chat.decred.org/) #general users: 662 (+63)
-- [Discord](https://discord.gg/GJ2GXfz) users: 2,293 (+118)
-- [Telegram](https://t.me/Decred) users: 2,828 (-332)
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,639 (-1), views: 214K (+14K)
 
 ## Governance
 
