--- a/journal/202204.md
+++ b/journal/202204.md
@@ -228,21 +228,23 @@ Community stats as of May 2 (compared against statistics from [December Journal]
 
 ## Governance
 
-In April the new [treasury](https://dcrdata.decred.org/treasury) received 9,481 DCR worth $575K at April's average rate of $60.62. 1,152 DCR was spent from the legacy treasury address to pay contractors, worth $70K at April's rate, or $66K at March's billing rate of $57.22. In March, around 610K DCR was transferred from the legacy treasury address to the new treasury account that requires stakeholder approval to spend from. 
+In April the new [treasury](https://dcrdata.decred.org/treasury) received 9,481 DCR worth $575K at April's average rate of $60.62. 1,152 DCR was spent from the legacy treasury address to pay contractors, worth $70K at April's rate, or $66K at March's billing rate of $57.22.
 
-As of May 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 788,247 DCR (32.7 million USD at $41.52).
+In Feb-Mar, around 617K DCR was transferred from the legacy treasury address to the new treasury account that requires stakeholder approval to spend from.
 
-Since the last issue of Decred Journal (December 2021), there have been four proposals published on Politeia, all approved. 
+As of May 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 788,247 DCR (32.7 million USD at $41.52). Around 46K DCR remains in the legacy treasury, or ~6% of the total.
+
+Since the last issue of Decred Journal ([December 2021](202112.md)), there have been four proposals published on Politeia, all approved. 
 
 The [proposal](https://proposals.decred.org/record/4475472) for continued development of Politeia with $138,600 was approved in March with 97% support and turnout of 55%. This sees Politeia development funded until July 2022.
 
 A [proposal](https://proposals.decred.org/record/6e9b633) by @Exitus to fund video content production with $32,000, covering the remainder of 2022, was approved in March with 98% support and turnout of 55%. 
 
-A [proposal](https://proposals.decred.org/record/1a290d8) to continue with phase 2 of @StakeShuffle\_ the twitter bot with $1,6840 was approved with 96% support and turnout of 55%.
+A [proposal](https://proposals.decred.org/record/1a290d8) to continue with phase 2 of @StakeShuffle\_ the Twitter bot with $1,684 was approved with 96% support and turnout of 55%.
 
 The [proposal](https://proposals.decred.org/record/3326c82) to continue phase 3 of DCRDEX development with $370,000 was approved in January with 97% support and 57% ticket turnout.
 
-All of the consensus changes deployed as part of the v1.7 release (DCP0007-DCP0010) were approved by voters with very similar voting outcomes: 99.9% approval of the 60% of tickets that voted (as opposed to abstaining, which ~40% did), there were just 61 votes against the subsidy split change (vs 23,664 Yes votes). Considering the opposition to this subsidy split proposal which was voiced in some quarters, the outcome suggests that the complaining parties either didn't have (m)any tickets or chose not to vote No with them for some reason.
+All of the consensus changes deployed as part of the v1.7 release ([DCP-7](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki), [DCP-8](https://github.com/decred/dcps/blob/master/dcp-0008/dcp-0008.mediawiki), [DCP-9](https://github.com/decred/dcps/blob/master/dcp-0009/dcp-0009.mediawiki), [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki)) were approved by voters with very similar voting outcomes: 99.9% approval of the 60% of tickets that voted (as opposed to abstaining, which ~40% did), there were just 61 votes against the [subsidy split change](https://proposals.decred.org/record/427e1d4) (vs 23,664 Yes votes). Considering the opposition to this subsidy split proposal which was voiced in some quarters, the outcome suggests that the complaining parties either didn't have (m)any tickets or chose not to vote No with them for some reason.
 
 The changes activated on May 8, so along with the new subsidy split there are automatic ticket revocations, and explicit version upgrades.
 
