Net normalize links
- Use "mode=Stepped" link for the Ticket Price chart. It is not applied
  due to a bug but if it is fixed, it will link to a stepped chart that
  is more accurate (because ticket price changes in steps, i.e. it is
  not smooth).
- Use same `zoom` param in first 4 links.
- Use all-time zoom for the mixed coins chart. Mixed coins % is a way
  less volatile metric and I think it's better to look at it on large
  zoom.
- Use host dcrdata.decred.org everywhere.

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -257,9 +257,9 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 10th: poolin.me 50.7%, viabtc.net 15.9%, iocnsoWYKbVeYHt 9.3%, luxor.tech 4.1%, btc.com 41%, f2pool.com 3.6%, coinmmine.pl 0.4%, I9KHVGMpeL2cRD 0.1%, Unknown 11.8%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l1ezonii-l2odxr6y&bin=window&axis=time&visibility=true-false) varied between 195.14-227.69 DCR, with 30-day [average](https://dcrstats.com/) at 214.2 DCR
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l1ezonii-l2odxr6y&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 195.14-227.69 DCR, with 30-day [average](https://dcrstats.com/) at 214.2 DCR
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1f4wx35-l2oj60rl&bin=day&axis=time) was 8,597,024-8,885,391 million DCR, meaning that 61.35%-63.03% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l1f4wx35-l2oj60rl&bin=day&axis=time) in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) was 8,597,024-8,885,391 million DCR, meaning that 61.35%-63.03% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) in Proof of Stake.
 
 63.03% of the supply staked represents a **new all time high!**
 
@@ -269,7 +269,7 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: dcrd:1.7.1 48.6%, dcrd:1.7.0, 16.6%, dcrd:1.7.0(pre) 9%, dcrd:1.6.2 5%, dcrd:1.8.0(pre) 4%, dcrd:1.6.0 2%, dcrd:1.7.2 2%, dcrd:1.5.2 2%, other 7%.
 
-The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=l0vk2hlo-l2pbss4i&scale=linear&bin=block&axis=time&visibility=true-true-true) varied between 57.86%-59.30%. Daily [mixed amount](https://explorer.dcrdata.org/charts?chart=privacy-participation&zoom=l0zwr2c4-l2ng683e&bin=day&axis=time&visibility=true-false) varied between 288,041-446,060 DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 57.86%-59.30%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jzuht6o0-l33oao00&bin=day&axis=time) varied between 288,041-446,060 DCR.
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.50 DCR as of May 10th.
 
