--- a/journal/202204.md
+++ b/journal/202204.md
@@ -253,13 +253,13 @@ The changes activated on May 8, so along with the new subsidy split there are au
 
 **Hashrate**: April's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l1ezonii-l2odxr6y&bin=day&axis=time) opened at ~261 Ph/s and closed ~331 Ph/s, bottoming at 243 Ph/s and peaking at 331 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 10th: poolin.me 52.3%, viabtc.net 24%, f2pool.com 8%, antpool.com 6%, luxor.tech 5%, pool.btc.com 3%, coinmine.pl and okx.com less than 1%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 10: poolin.me 52%, viabtc.net 24%, f2pool.com 8%, antpool.com 6%, luxor.tech 5%, pool.btc.com 3%, coinmine.pl and okx.com less than 1%.
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 10th: poolin.me 50.7%, viabtc.net 15.9%, iocnsoWYKbVeYHt 9.3%, luxor.tech 4.1%, btc.com 41%, f2pool.com 3.6%, coinmmine.pl 0.4%, I9KHVGMpeL2cRD 0.1%, Unknown 11.8%.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 10: poolin.me 51%, viabtc.net 16%, iocnsoWYKbVeYHt 9%, luxor.tech 4%, btc.com 4%, f2pool.com 3.6%, coinmmine.pl 0.4%, I9KHVGMpeL2cRD 0.1%, Unknown 12%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l1ezonii-l2odxr6y&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 195.14-227.69 DCR, with 30-day [average](https://dcrstats.com/) at 214.2 DCR
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l1ezonii-l2odxr6y&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 195-228 DCR, with 30-day [average](https://dcrstats.com/) at 214.2 DCR
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) was 8,597,024-8,885,391 million DCR, meaning that 61.35%-63.03% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) was 8.60-8.89 million DCR, meaning that 61.4%-63.0% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) in Proof of Stake.
 
 63.03% of the supply staked represents a **new all time high!**
 
@@ -267,11 +267,11 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 **Nodes**: Throughout April there were around 174 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: dcrd:1.7.1 48.6%, dcrd:1.7.0, 16.6%, dcrd:1.7.0(pre) 9%, dcrd:1.6.2 5%, dcrd:1.8.0(pre) 4%, dcrd:1.6.0 2%, dcrd:1.7.2 2%, dcrd:1.5.2 2%, other 7%.
+Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: dcrd:1.7.1 49%, dcrd:1.7.0, 17%, dcrd:1.7.0(pre) 9%, dcrd:1.6.2 5%, dcrd:1.8.0(pre) 4%, dcrd:1.6.0 2%, dcrd:1.7.2 2%, dcrd:1.5.2 2%, other 7%.
 
-The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 57.86%-59.30%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jzuht6o0-l33oao00&bin=day&axis=time) varied between 288,041-446,060 DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 57.9%-59.3%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jzuht6o0-l33oao00&bin=day&axis=time) varied between 288K-446K DCR.
 
-Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.50 DCR as of May 10th.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.5 DCR as of May 10.
 
 
 ## Ecosystem
