Net expand and polish
- On many dcrdata charts, switch the Bin option to Block to see the chart
  in higher precision.
- Prettify mining pool names.
- Use prefix rather than suffix in unidentified mining addrs. I think 7
  characters is enough.
- Round VSP live tickets just a bit for consistency with how we rounded
  it previously.
- Expand the VSP subsection to cover the May 8 fork day.
- dcrextdata was rebranded to PD Analytics.
- Use prettier formatting for node versions.
- Round daily mixed coins figure.

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -251,25 +251,27 @@ The changes activated on May 8, so along with the new subsidy split there are au
 
 ## Network
 
-**Hashrate**: April's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l1ezonii-l2odxr6y&bin=day&axis=time) opened at ~261 Ph/s and closed ~331 Ph/s, bottoming at 243 Ph/s and peaking at 331 Ph/s throughout the month.
+**Hashrate**: April's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l1ezonii-l2odxr6y&bin=day&axis=time) opened at ~261 Ph/s and closed ~331 Ph/s, bottoming at 212 Ph/s and peaking at 370 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 10: poolin.me 52%, viabtc.net 24%, f2pool.com 8%, antpool.com 6%, luxor.tech 5%, pool.btc.com 3%, coinmine.pl and okx.com less than 1%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on May 10: Poolin 52%, ViaBTC 24%, F2Pool 8%, AntPool 6%, Luxor 5%, BTC.com 3%, CoinMine and OKx less than 1%.
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 10: poolin.me 51%, viabtc.net 16%, iocnsoWYKbVeYHt 9%, luxor.tech 4%, btc.com 4%, f2pool.com 3.6%, coinmmine.pl 0.4%, I9KHVGMpeL2cRD 0.1%, Unknown 12%.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before May 10: Poolin 51%, ViaBTC 16%, DsV1GF7 9%, Luxor 4%, BTC.com 4%, F2Pool 3.6%, CoinmMine 0.4%, DsX51bV 0.1%, unknown 12%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l1ezonii-l2odxr6y&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 195-228 DCR, with 30-day [average](https://dcrstats.com/) at 214.2 DCR
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l1ezonii-l2odxr6y&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 195-228 DCR, with 30-day [average](https://dcrstats.com/) at 214.2 DCR.
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) was 8.60-8.89 million DCR, meaning that 61.4%-63.0% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) was 8.58-8.89 million DCR, meaning that 61.4%-63.0% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l1ezonii-l2odxr6y&bin=block&axis=time) in Proof of Stake.
 
 63.03% of the supply staked represents a **new all time high!**
 
-**VSP**: On May 10, ~6,778 live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 116 by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 16.8% of the ticket pool. 
+**VSP**: On May 10, ~6,780 live tickets were managed by 15 [listed](https://decred.org/vsp/) vspd servers, or 16.6% of the ticket pool. This is a small bump by ~230 tickets or +0.4% of the ticket pool, compared to our last snapshot on Jan 2.
 
-**Nodes**: Throughout April there were around 174 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
+Legacy (dcrstakepool) tickets can no longer be voted since May 8 when the chain forked to the new rules. On May 10, the 7 listed and 1 unlisted legacy VSPs collectively reported 125 tickets but this figure is outdated. 5 of these VSPs have stopped voting between May 2021 and Feb 2022. The remaining 3 that voted till the very end had 27 live tickets on May 8. coinmine.pl, decredbrasil.com, and stakey.net showed to be the most hardcore.
 
-Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: dcrd:1.7.1 49%, dcrd:1.7.0, 17%, dcrd:1.7.0(pre) 9%, dcrd:1.6.2 5%, dcrd:1.8.0(pre) 4%, dcrd:1.6.0 2%, dcrd:1.7.2 2%, dcrd:1.5.2 2%, other 7%.
+**Nodes**: Throughout April there were around 175 reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
-The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 57.9%-59.3%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jzuht6o0-l33oao00&bin=day&axis=time) varied between 288K-446K DCR.
+Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 187 total: v1.7.1 - 49%, v1.7.0 - 17%, v1.7.0 dev builds - 9%, v1.6.2 - 5%, v1.8.0 dev builds - 4%, v1.6.0 - 2%, v1.7.2 - 2%, v1.5.2 - 2%, other - 7%.
+
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 57.9%-59.3%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jzuht6o0-l33oao00&bin=day&axis=time) varied between 290-450K DCR.
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.5 DCR as of May 10.
 
