Net add LN diff since Jan

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -273,7 +273,7 @@ Node versions as of May 10 [snapshot](https://nodes.jholdstock.uk/user_agents) 1
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 57.9%-59.3%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jzuht6o0-l33oao00&bin=day&axis=time) varied between 290-450K DCR.
 
-Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.5 DCR as of May 10.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 45 nodes, 78 channels with a total capacity of 41.5 DCR as of May 10 - a nice bump since January's 36 nodes, 66 channels, and 25.5 DCR capacity.
 
 
 ## Ecosystem
