--- a/journal/202204.md
+++ b/journal/202204.md
@@ -302,8 +302,9 @@ Secured the following news articles:
 
 **Attended:**
 
-- [Exitus attended a cryptocurrency meetup](https://twitter.com/exitusdcr/status/1506118577035825157) at the Hashhouse in Medellin, Colombia on March 21. There he informed attendees about Decred and its unique features.
-- [Insaf Nori](https://twitter.com/in_insaf/status/1506976446044114944) was invited to talk about [Blockchain Technology](https://decredcommunity.github.io/events/index/20220326.1) and Decred Technology at the half-day training organized for the members of AEFDS Deroua.
+- @Exitus attended a [cryptocurrency meetup](https://twitter.com/exitusdcr/status/1506118577035825157) at the Hashhouse in Medellin, Colombia on March 21. There he informed attendees about Decred and its unique features.
+- [Insaf Nori](https://twitter.com/in_insaf/status/1506976446044114944) (@arij) was invited to talk about [Blockchain Technology](https://decredcommunity.github.io/events/index/20220326.1) and Decred Technology at the half-day training organized for the members of AEFDS Deroua.
+
 
 ## Media
 
