Media formatting tweaks, read inside
- Reformatted coverage of the full node guide. First, format quote as a
  quote block. Second, move out the Raspberry Pi sentence since it's not
  part of the quote. Mind that I do not add indentation to "nest" all 3
  paragraphs under the bullet. GitHub Markdown renderer will handle it,
  but Medium will not.

- Make decredsociety.com domain visible. I type important domains
  explicitly to help people remember them for security and a bit of
  promotion.

- Convert content titles to `Sentence case` for consistency with past
  issues. Open to discuss this if it looks worse than `Title Case`.

- Add authors names to articles, in addition to outlet names.

- Use `@phoenixgreen` over `@DecredSociety`. I thought a lot about how
  to refer to people (https://github.com/xaur/decred-news/issues/20) and
  the latest is to use "the most widely known" handle, preferring Matrix
  ones.

  `@phoenixgreen` was used in his Medium originally, then in Matrix, and
  I used it in many past DJ issues. One undocumented "feature" of
  consistent usernames in DJ is I can do a fast and simple text search
  over DJ files and find person's contributions over 3+ years of Decred
  history. Open to discuss/change this ofc.

- Changed "Element" back to "Matrix" because Element is just one client.
  However, it made me wonder if we should make a step back on naming
  things properly to better connect with people who call the chat network
  "Element", which may be a lot of people.

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -308,49 +308,50 @@ Secured the following news articles:
 
 ## Media
 
-- [Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) has written a cloud-based Decred [full-node tutorial](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) using Digital Ocean.
+- [@Applesaucesome](https://twitter.com/applesaucesome1/status/1517024462222336000) has written a cloud-based Decred [full-node tutorial](https://medium.com/@applesaucesome.dcr/decred-full-node-on-digital-ocean-92b904922291) using Digital Ocean.
 
-**Why run a full node you might ask?**
+> **Why run a full node you might ask?**
+> 
+> *Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness.*
 
-*Full nodes are the backbone of Decred. By validating and broadcasting transactions without relying on third parties they help keep the network decentralized. Each full node added to the network adds to its security and robustness. There are also [Raspberry PI Tutorials](https://www.youtube.com/watch?v=B-5O_GBcbV0) available.*
+There are also [Raspberry Pi tutorials](https://www.youtube.com/watch?v=B-5O_GBcbV0) available.
 
-- A [website](https://www.decredsociety.com/) dedicated to Decred related ideas, news, and other aspects by @DecredSociety. @Applesaucesome will also be posting technicals and other information related to Decred's markets.
+- Meet [decredsociety.com](https://www.decredsociety.com/) - a new website dedicated to Decred related ideas, news, and other aspects by @phoenixgreen. @Applesaucesome will also be posting technicals and other information related to Decred's markets.
 
 **Selected articles:**
 
-- [Top 10 Privacy Coins & How To Buy Them](https://www.binance.com/en/blog/fiat/top-10-privacy-coins--how-to-buy-them-421499824684903655) by Binance (Decred #4)
-- [Decred price soars 45% in one day three weeks before a major hard fork](https://cointelegraph.com/news/decred-price-soars-45-in-one-day-three-weeks-before-a-major-hard-fork) by Cointelegraph
-- [Spread of Sanctions Makes Privacy Tokens the Hot Bet in Crypto Markets](https://www.coindesk.com/markets/2022/04/13/spread-of-sanctions-makes-privacy-tokens-the-hot-bet-in-crypto-markets/) by CoinDesk
-- [Decred Price Prediction: Here’s Why DCR Is Going Vertical](https://www.investingcube.com/decred-price-prediction-heres-why-dcr-is-going-vertical-cryptocurrencies/) by InvestingCube
-
+- [Top 10 privacy coins & how to buy them](https://www.binance.com/en/blog/fiat/top-10-privacy-coins--how-to-buy-them-421499824684903655) by Binance (Decred #4)
+- [Decred price soars 45% in one day three weeks before a major hard fork](https://cointelegraph.com/news/decred-price-soars-45-in-one-day-three-weeks-before-a-major-hard-fork) by Yashu Gola of Cointelegraph
+- [Spread of sanctions makes privacy tokens the hot bet in crypto markets](https://www.coindesk.com/markets/2022/04/13/spread-of-sanctions-makes-privacy-tokens-the-hot-bet-in-crypto-markets/) by Lyllah Ledesma of CoinDesk
+- [Decred price prediction: Here's why DCR is going vertical](https://www.investingcube.com/decred-price-prediction-heres-why-dcr-is-going-vertical-cryptocurrencies/) by Crispus Nyaga of InvestingCube
 
 **Videos:**
 
-- [Decred News Update - On-Chain Voting Underway, dcrd 1.7.1, LN Upgrades, Subsidy Change + New Host!](https://www.youtube.com/watch?v=BSHywc5qRzU) by @Exitus
-- [Decred DEX Tutorial: Peer-to-Peer Atomic Swap Trading](https://www.youtube.com/watch?v=XaE_xzGKjeQ) by @Exitus
-- [Decred Block Explorer - DCRDATA Series Part 1](https://www.youtube.com/watch?v=o4Cye1CRThs) by @DecredSociety
-- [Hard Fork vs Soft Fork - Decred Fundamentals](https://www.youtube.com/watch?v=DmkQrk3OInU) by @Decred Society
-- [Six Years of Decred - Part 1](https://www.youtube.com/watch?v=0Z50aW-RZtw) by @DecredSociety
-- [Six Years of Decred - Part 2](https://www.youtube.com/watch?v=CI4yFLfHnqc) by @DecredSociety
-- [What Is Decred (DCR) Crypto And How Is It Performing?](https://www.youtube.com/watch?v=30waU59s4Jk) by Kalkine Media
+- [Decred News Update - On-chain voting underway, dcrd 1.7.1, LN upgrades, subsidy change + new host!](https://www.youtube.com/watch?v=BSHywc5qRzU) by @Exitus
+- [Decred DEX tutorial: peer-to-peer atomic swap trading](https://www.youtube.com/watch?v=XaE_xzGKjeQ) by @Exitus
+- [Decred block explorer - DCRDATA Series part 1](https://www.youtube.com/watch?v=o4Cye1CRThs) by @phoenixgreen
+- [Hard fork vs soft fork - Decred Fundamentals](https://www.youtube.com/watch?v=DmkQrk3OInU) by @phoenixgreen
+- [Six years of Decred - part 1](https://www.youtube.com/watch?v=0Z50aW-RZtw) by @phoenixgreen
+- [Six years of Decred - part 2](https://www.youtube.com/watch?v=CI4yFLfHnqc) by @phoenixgreen
+- [What is Decred crypto and how is it performing?](https://www.youtube.com/watch?v=30waU59s4Jk) by Kalkine Media
 
-A new monthly LiveStream initiative has been started by @DecredSociety and @Exitus called Decred and the State of the Market. Any eager community members are welcome to join!
+A new monthly LiveStream initiative has been started by @phoenixgreen and @Exitus called "Decred and the State of the Market". Any eager community members are welcome to join!
 
-- [Sanctions, Confiscation and Regulations](https://www.youtube.com/watch?v=t3KQ4UhNNOI) by @Exitus and @DecredSociety
-- [Stable Coins and DAO's](https://www.youtube.com/watch?v=a5W_90nuJQ8) by @Exitus and @DecredSociety
+- [Sanctions, confiscation and regulations](https://www.youtube.com/watch?v=t3KQ4UhNNOI) by @Exitus and @phoenixgreen
+- [Stable coins and DAO's](https://www.youtube.com/watch?v=a5W_90nuJQ8) by @Exitus and @phoenixgreen
 
 **TikTok Videos:**
 
-- [TikTok talking about the importance of the DCR Treasury](https://www.tiktok.com/@decred_crypto/video/7081478628759833861) by @Exitus and @DCR\_Dajana
+- [TikTok talking about the importance of the DCR treasury](https://www.tiktok.com/@decred_crypto/video/7081478628759833861) by @Exitus and @DCR\_Dajana
 - [Tiktok about Cathie Wood mentioning Decred](https://twitter.com/DajanaDcr/status/1511162514779914241) by @Exitus and @DCR\_Dajana
 
 **Art and fun:**
 
 - [Decred is the Jack of all Trades](https://twitter.com/exitusdcr/status/1513394638446542849) by @Exitus
-- [DCRDEX Atomic-Swap Art](https://twitter.com/exitusdcr/status/1518466782037745666) by @Exitus
+- [DCRDEX atomic-swap art](https://twitter.com/exitusdcr/status/1518466782037745666) by @Exitus
 - [Decred Ramadan](https://twitter.com/DecredArabia/status/1509991552382349312) by @DecredArabia
 
-Please post yours memes in the #DCR Memes channel on Discord or Element!
+Please post yours memes in the `#DCR Memes` channel on Discord or Matrix!
 
 Other non-English content:
 
