image selection round 2

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -4,6 +4,8 @@
 
 _Image: Objective Constructs by @saender_
 
+DJ is back! April's highlights:
+
 - Version 1.7.2 of the Decred node and wallet software was released on May 11, it fixes some bugs and adds the treasury spend voting feature for Decrediton users.
 - The four consensus changes DCP0007-DCP0010 were all approved by stakeholder voting with almost unanimous support (~99.7%) in April, and all have activated on May 8 so any nodes running old versions will have been forked off the network.
 - In March, the majority of the funds held in the old treasury address, over 610,000 DCR, was transferred into the new treasury which requires stakeholder approval of spends.
@@ -74,7 +76,7 @@ Other changes:
 - More automated UI testing coverage.
 - ~5 bug fixes.
 
-{ image candidates: 3669! 3732 3733 3736 3740, and 3718 since we added it }
+{ images: 3718 3669 }
 
 <img src=../img/202204.2.github.png width="700" height="400">
 
@@ -99,8 +101,6 @@ User-facing UI changes:
 - Revamped [loading placeholders](https://github.com/decred/politeiagui/pull/2755) for proposals.
 - Reimplemented [Proposal details](https://github.com/decred/politeiagui/pull/2723) page using the latest components.
 - Utilized new Markdown rendering and error handling in the [comments plugin](https://github.com/decred/politeiagui/pull/2758).
-
-{ image candidates: https://github.com/decred/pi-ui/pull/429 }
 
 Developer UI changes:
 
@@ -144,7 +144,7 @@ Other changes:
 - Better contract expiry edge case handling on the [server](https://github.com/decred/dcrdex/pull/1541) and on the [client](https://github.com/decred/dcrdex/pull/1548).
 - Various bug fixes, optimizations, and other improvements.
 
-{ image: 1589 - check size, maybe move to the bottom to not steal all attention from the quote below }
+{ image: custom by Exitus and/or 1589; check size, maybe move to the bottom to not steal all attention from the quote below }
 
 ![](../img/202204.3.github.png)
 
@@ -179,8 +179,6 @@ Other changes:
 - Prevent restoring [duplicate wallets](https://github.com/planetdecred/dcrios/pull/905) from same seed.
 - Various tweaks, bug fixes, and other optimizations.
 
-{ image candidates: maybe 902 or 883 }
-
 <a id="godcr" />
 
 **[GoDCR](https://github.com/planetdecred/godcr)**
@@ -204,7 +202,7 @@ In progress:
 
 - Initial [DEX integration](https://github.com/planetdecred/godcr/issues/619), specifically [wallet setup](https://github.com/planetdecred/godcr/pull/798) and [DEX registration](https://github.com/planetdecred/godcr/pull/900).
 
-{ image candidates: 826 890 and some from Exitus }
+{ images: 826 }
 
 **Other**
 
