--- a/journal/202204.md
+++ b/journal/202204.md
@@ -408,7 +408,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing and editing: bee, Exitus, Lindsey McConaghy, richardred
+- writing and editing: bee, bochinchero, Exitus, l1ndseymm, richardred
 - reviews and feedback: chappjc, davecgh
 - title image: saender
 - funding: Decred stakeholders
