--- a/journal/202204.md
+++ b/journal/202204.md
@@ -76,7 +76,13 @@ Other changes:
 - More automated UI testing coverage.
 - ~5 bug fixes.
 
-{ images: 3718 3669 }
+![](../img/202204.2.github.png)
+
+_Voting on Treasury Spending is now in Decrediton!_
+
+![](../img/202204.3.github.png)
+
+_RTFM without leaving Decrediton!_
 
 <img src=../img/202204.2.github.png width="700" height="400">
 
@@ -144,11 +150,11 @@ Other changes:
 - Better contract expiry edge case handling on the [server](https://github.com/decred/dcrdex/pull/1541) and on the [client](https://github.com/decred/dcrdex/pull/1548).
 - Various bug fixes, optimizations, and other improvements.
 
-{ image: custom by Exitus and/or 1589; check size, maybe move to the bottom to not steal all attention from the quote below }
-
-![](../img/202204.3.github.png)
-
 > v0.5 is shaping up with a lot of big changes. Loads [already merged](https://github.com/decred/dcrdex/milestone/16?closed=1), but under review presently are swap acceleration with [CPFP transactions](https://github.com/decred/dcrdex/pull/1555), [mixed DCR](https://github.com/decred/dcrdex/pull/1498) account support, support for LTC's MWEB release, [Zcash](https://github.com/decred/dcrdex/pull/1570), [Electrum](https://github.com/decred/dcrdex/pull/1607) wallet support (SPV for many assets with existing/external wallets), and of course ETH on mainnet which we have been holding back from prime time. \[[@chappjc](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$sH4VqshHQ7s-yUkldhYG7SGlVpPlyCjExbiLkCoX9Y0), 2022-05-13\]
+
+![](../img/202204.4.github.jpg)
+
+_Much wallets!_
 
 <a id="dcrandroid" />
 
@@ -165,7 +171,9 @@ Other changes:
 - Updated [French](https://github.com/planetdecred/dcrandroid/pull/605) translation.
 - ~4 bug fixes, and other tweaks and optimizations.
 
-{ image: 601 (2nd screenshot) - compress for GitHub }
+![](../img/202204.5.github.png)
+
+_Keep your DCR balance to yourself!_
 
 <a id="dcrios" />
 
@@ -202,7 +210,9 @@ In progress:
 
 - Initial [DEX integration](https://github.com/planetdecred/godcr/issues/619), specifically [wallet setup](https://github.com/planetdecred/godcr/pull/798) and [DEX registration](https://github.com/planetdecred/godcr/pull/900).
 
-{ images: 826 }
+![](../img/202204.6.github.png)
+
+_GoDCR balance overview. Don't just look at it, press the button!_
 
 **Other**
 
@@ -263,7 +273,9 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 63.03% of the supply staked represents a **new all time high!**
 
-{ image: staking % ATH from bochinchero }
+![](../img/202204.7.github.png)
+
+_We're just staking. A bit more again. Nothing to see here!_
 
 **VSP**: On May 10, ~6,780 live tickets were managed by 15 [listed](https://decred.org/vsp/) vspd servers, or 16.6% of the ticket pool. This is a small bump by ~230 tickets or +0.4% of the ticket pool, compared to our last snapshot on Jan 2.
 
@@ -380,7 +392,13 @@ In April DCR was trading between USD $52.40-$86.20 / BTC 0.00129-0.00216. The av
 
 DCR rallied by nearly 45% to over $86 in one day on April 18th, its highest level in four months. This pump was unfortunately short-lived.
 
-{ images: DEX vol DCR, DEX vol from dcrdata }
+![](../img/202204.8.github.png)
+
+_DEX April-May volume, in DCR_
+
+![](../img/202204.9.github.png)
+
+_DEX monthly volume, in DCR_
 
 
 ## Relevant External
