fix image usage

--- a/journal/202204.md
+++ b/journal/202204.md
@@ -84,8 +84,6 @@ _Voting on Treasury Spending is now in Decrediton!_
 
 _RTFM without leaving Decrediton!_
 
-<img src=../img/202204.2.github.png width="700" height="400">
-
 <a id="politeia" />
 
 **[Politeia](https://github.com/decred/politeia)**
@@ -392,7 +390,7 @@ In April DCR was trading between USD $52.40-$86.20 / BTC 0.00129-0.00216. The av
 
 DCR rallied by nearly 45% to over $86 in one day on April 18th, its highest level in four months. This pump was unfortunately short-lived.
 
-![](../img/202204.8.github.png)
+![](../img/202204.8.full.png)
 
 _DEX April-May volume, in DCR_
 
